--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "socket.io": "^4.5.4",
-    "cors": "^2.8.5"
+    "socket.io-client": "^4.8.1"
   }
-} 
+}
