--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^4.18.2",
-    "socket.io": "^4.5.4",
+    "express": "^4.21.2",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
